[gd_scene load_steps=15 format=2]

[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Game/Options/BackButton.gd" type="Script" id=4]
[ext_resource path="res://Game/Options/TopDownButton.gd" type="Script" id=5]
[ext_resource path="res://Game/Options/RegularButton.gd" type="Script" id=6]
[ext_resource path="res://Game/Options/Options.gd" type="Script" id=7]
[ext_resource path="res://Resources/Custom Resources/TestControlConfig.tres" type="Resource" id=8]
[ext_resource path="res://Game/Options/TiltSensitivity.gd" type="Script" id=9]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="Options" type="Node2D"]
script = ExtResource( 7 )
main_menu = "res://Game/MainMenu/MainMenu.tscn"
control_config = ExtResource( 8 )

[node name="Pond" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UI"]
margin_right = 176.0
margin_bottom = 64.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/BackButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 89, 34 )
custom_fonts/font = SubResource( 1 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/BackButton/Label"]

[node name="HoldingPreference" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -562.5
margin_top = -258.0
margin_right = 562.5
margin_bottom = -190.0
custom_fonts/font = SubResource( 2 )
text = "how will you hold the device?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopDownButton" type="Button" parent="UI/HoldingPreference"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = 97.0
margin_right = 144.0
margin_bottom = 142.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/HoldingPreference/TopDownButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 144, 26 )
custom_fonts/font = SubResource( 3 )
text = "top-down"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/HoldingPreference/TopDownButton/Label"]

[node name="Tick" type="TextureRect" parent="UI/HoldingPreference/TopDownButton"]
margin_left = 308.0
margin_top = -11.0
margin_right = 372.0
margin_bottom = 53.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegularButton" type="Button" parent="UI/HoldingPreference"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 197.0
margin_right = 118.0
margin_bottom = 261.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/HoldingPreference/RegularButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 119, 26 )
custom_fonts/font = SubResource( 3 )
text = "regular"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/HoldingPreference/RegularButton/Label"]

[node name="Tick" type="TextureRect" parent="UI/HoldingPreference/RegularButton"]
margin_left = 278.0
margin_right = 342.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TiltSensitivity" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = 118.0
margin_right = 239.5
margin_bottom = 170.0
custom_fonts/font = SubResource( 4 )
text = "Tilt Sensitivity"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="UI/TiltSensitivity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 22.0
margin_right = 200.0
margin_bottom = 38.0
rect_scale = Vector2( 1, 3 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransition" parent="UI" instance=ExtResource( 10 )]

[connection signal="button_down" from="UI/BackButton" to="UI/BackButton" method="_on_BackButton_button_down"]
[connection signal="button_up" from="UI/BackButton" to="UI/BackButton" method="_on_BackButton_button_up"]
[connection signal="tween_all_completed" from="UI/BackButton/Label/Tween" to="UI/BackButton" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="UI/HoldingPreference/TopDownButton" to="UI/HoldingPreference/TopDownButton" method="_on_TopDownButton_button_down"]
[connection signal="button_up" from="UI/HoldingPreference/TopDownButton" to="UI/HoldingPreference/TopDownButton" method="_on_TopDownButton_button_up"]
[connection signal="tween_all_completed" from="UI/HoldingPreference/TopDownButton/Label/Tween" to="UI/HoldingPreference/TopDownButton" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="UI/HoldingPreference/RegularButton" to="UI/HoldingPreference/RegularButton" method="_on_RegularButton_button_down"]
[connection signal="button_up" from="UI/HoldingPreference/RegularButton" to="UI/HoldingPreference/RegularButton" method="_on_RegularButton_button_up"]
[connection signal="tween_all_completed" from="UI/HoldingPreference/RegularButton/Label/Tween" to="UI/HoldingPreference/RegularButton" method="_on_Tween_tween_all_completed"]
[connection signal="value_changed" from="UI/TiltSensitivity/HSlider" to="." method="_on_HSlider_value_changed"]
